--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -42,7 +42,7 @@ import logoMedium from "../assets/logo/logo-medium.png"
           </svg>
         </a>
         <a
-          href="#"
+          href="https://docs.notifuse.com/installation"
           class="bg-primary text-white px-4 py-1 rounded-md hover:bg-primary/80 transition-colors"
           >Get Started</a
         >
