--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,10 @@ import AutomationsPreview from "../components/AutomationsPreview.astro"
       name="description"
       content="The creative platform for cross-functional newsletter and notification workflows. Open-source, powerful, and built for teams."
     />
-    <script defer data-domain="notifuse.com" src="https://plausible-analytics-ce-production-5f11.up.railway.app/js/script.js"></script>
+    <script
+      defer
+      data-domain="notifuse.com"
+      src="https://plausible.notifuse.com/js/script.js"></script>
   </head>
   <body class="bg-white-98">
     <div class="container relative border-r border-l border-gray-200">
