--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,13 +28,13 @@ import logoMedium from "../assets/logo/logo-medium.png"
               >Try Email Editor Live</a
             >
           </li>
-          <!-- <li>
+          <li>
             <a
-              href="#"
+              href="/compare"
               class="text-gray-600 hover:text-gray-900 transition-colors"
-              >Blog</a
+              >Compare Alternatives</a
             >
-          </li> -->
+          </li>
           <li>
             <a
               href="https://docs.notifuse.com"
