--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,7 +105,7 @@ import AutomationsPreview from "../components/AutomationsPreview.astro"
                 class="flex flex-col sm:flex-row gap-3 justify-center lg:justify-start"
               >
                 <a
-                  href="https://demo.notifuse.com/signin?email=demo@notifuse.com"
+                  href="https://demo.notifuse.com/console/signin?email=demo@notifuse.com"
                   class="bg-primary text-white px-4 py-2 rounded-md text-base font-semibold hover:bg-primary/80 transition-colors"
                 >
                   Live Demo
